# Synapse

./: .env.example  .gitattributes  .gitignore  ACCEPTANCE.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY_OPPORTUNITY_DESIGN.md  NEXT_DEVELOPMENT_PLAN.md  PRODUCTION_READINESS_STATUS.md  PRODUCTION_RELEASE_CHECKLIST.md  README.md  RELEASE_DISTRIBUTION_NOTES.md  SECURITY.md  STRATEGIC_ROADMAP.md  Synapse v6.5 设计文档-GPT优化迭代.docx  TODO-CODEX.md  TODO-SYNAPSE-FUSION.md  V65_ALIGNMENT_MATRIX.md  VERSIONING.md  index.html  package-lock.json  package.json  synapse.config.toml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/scripts/: browser_readonly.py  safe-system-inventory.ps1
src-tauri/src/: aggregation.rs  arsenal.rs  executor_contract.rs  http_source.rs  lib.rs  main.rs  policy.rs  scheduler.rs  synthesis.rs  zhishu.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/context/: mod.rs
src-tauri/src/domains/: agent_harness.rs  agent_team.rs  browser_automation.rs  codebase_memory.rs  computer_diagnostics.rs  context_budget.rs  daily_briefing.rs  device_sync.rs  library_home.rs  local_app_bridge.rs  mod.rs  notification_gateway.rs  permission_memory.rs  production_readiness.rs  quant_lab.rs  saga_recovery.rs  skill_library.rs  source_registry.rs  web_app_shell.rs
src-tauri/src/drivers/: mod.rs
src-tauri/src/execution/: mod.rs
src-tauri/src/kernel/: mod.rs
src-tauri/src/rules/: mod.rs
src-tauri/src/services/: aggregation.rs  (+14 more)
(+138 files in other folders)
